[gd_scene load_steps=4 format=2]

[ext_resource path="res://entity/map_entity/rock_1/Rock1.obj" type="ArrayMesh" id=1]
[ext_resource path="res://entity/map_entity/MapEntity.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=1]

[node name="map_entity" type="StaticBody"]
collision_mask = 0
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
software_skinning_transform_normals = false

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.456376, 0 )
shape = SubResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
max_distance = 80.0

[connection signal="camera_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_entered"]
[connection signal="camera_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_exited"]
